namespace Decorator.Interface
{
    public interface IPlayerAction
    {
        void Attack();
    }
}